[gd_scene load_steps=4 format=3 uid="uid://dk6awajoi50g5"]

[ext_resource type="Script" path="res://scenes/ui/menu.gd" id="1_rtbwb"]

[sub_resource type="InputEventKey" id="InputEventKey_seerj"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_blr2x"]
events = [SubResource("InputEventKey_seerj")]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_rtbwb")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.45098, 0.47451, 1, 1)

[node name="MainMenu" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
offset_left = -175.0
offset_top = -125.0
offset_right = 175.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9
alignment = 1

[node name="NewGame" type="Button" parent="MainMenu" groups=["buttons"]]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "New Game"

[node name="Options" type="Button" parent="MainMenu" groups=["buttons"]]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="Exit" type="Button" parent="MainMenu" groups=["buttons"]]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Exit"

[node name="Label" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 90
text = "WRECKING PONG"

[node name="GameModeMenu" type="VSplitContainer" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="GameMode" type="HBoxContainer" parent="GameModeMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="OnePlayer" type="Button" parent="GameModeMenu/GameMode" groups=["buttons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "One Player"

[node name="TwoPlayers" type="Button" parent="GameModeMenu/GameMode" groups=["buttons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Two Players"

[node name="MarginContainer" type="MarginContainer" parent="GameModeMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 15

[node name="BackButton" type="Button" parent="GameModeMenu/MarginContainer" groups=["buttons"]]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
shortcut = SubResource("Shortcut_blr2x")
text = "Back"

[connection signal="pressed" from="MainMenu/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MainMenu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainMenu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="GameModeMenu/GameMode/OnePlayer" to="." method="_on_one_player_pressed"]
[connection signal="pressed" from="GameModeMenu/GameMode/TwoPlayers" to="." method="_on_two_players_pressed"]
[connection signal="pressed" from="GameModeMenu/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
